--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Site Name - Daily Sports Predictions</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+    <header>
+        <h1>Your Site Name</h1>
+        <p>Your Daily Source for Data-Driven Sports Predictions</p>
+    </header>
+
+    <main>
+        <h2>Latest Predictions</h2>
+        </main>
+
+    <footer>
+        <p>&copy; 2025 Your Site Name. All Rights Reserved.</p>
+        <p>Please gamble responsibly. This is not financial advice.</p>
+    </footer>
+
+</body>
+</html>
