--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <main>
         <h2>Latest Predictions</h2>
+        <ul>
+            <li><a href="blog/sample-prediction.html">Sample Prediction</a></li>
+        </ul>
         </main>
 
     <footer>
