--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <h2>Latest Predictions</h2>
         <ul>
-            <li><a href="blog/Newcastle-vs-Barcelona-UEFAchampionsleague.html">Sample Prediction</a></li>
+            <li><a href="blog/Newcastle-vs-Barcelona-UEFAchampionsleague.html">Newcastle vs Barcelona UEFA - Match Prediction & Stats</a></li>
         </ul>
         </main>
 
