--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Site Name - Daily Sports Predictions</title>
+    <title>Omega - Daily Sports Predictions</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header>
-        <h1>Your Site Name</h1>
+        <h1>Omega</h1>
         <p>Your Daily Source for Data-Driven Sports Predictions</p>
     </header>
 
@@ -21,7 +21,7 @@
         </main>
 
     <footer>
-        <p>&copy; 2025 Your Site Name. All Rights Reserved.</p>
+        <p>&copy; 2025 Omega. All Rights Reserved.</p>
         <p>Please gamble responsibly. This is not financial advice.</p>
     </footer>
 
