--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h2>Latest Predictions</h2>
         <ul>
             <li><a href="blog/Newcastle-vs-Barcelona-UEFAchampionsleague.html">Newcastle vs Barcelona UEFA - Match Prediction & Stats</a></li>
+            <li><a href="blog/ManCity-vs-Napoli-UEFA.html">ManCity vs Napoli UEFA - Match Prediction & Stats</a></li>
         </ul>
         </main>
 
